--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
                 </a>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                     </ul>
 
                     <ul class="navbar-nav ml-auto mt-2">
@@ -39,7 +39,7 @@
         </div>
 
         <!-- Main block-->
-        <main class="container p-5">
+        <main class="container p-5 toppad">
             {% block main %}{% endblock %}
         </main>
         
