Add dynamic navbar that responds to login

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,15 +25,22 @@
                     <img src="/static/icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
                     Awit
                 </a>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                    </ul>
-
-                    <ul class="navbar-nav ml-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
-                    </ul>
+                <div class="collapse navbar-collapse" id="navbar">
+                    {% if "user_id" in session %}
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                        </ul>
+                    
+                        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                            <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+                        </ul>
+                        
+                    {%else%}
+                        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                            <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                        </ul>
+                    {% endif %}
                 </div>
             </nav>
         </div>
