Added comments in helpers

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
         <!-- Navbar -->
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light nav">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/">
                     <img src="/static/icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
                     Awit
                 </a>
