--- a/static/styles.css
+++ b/static/styles.css
@@ -1,17 +1,42 @@
 main {
     /* center contents */
+
+    
+}
+
+
+.form-box {
+    width: 300px;
+    margin: 0 auto;
     text-align: center;
-    
+}
+.center {
+    text-align: center;
+    margin: 0 auto;
 }
 
-.center-form { 
-
-    margin: 0 auto; 
-    width:250px;
-    
+.status-box {
+    display: flex;
+    align-items: center;
 }
 
+main {
+    margin-top: 50px;
+}
+
+input[type="text"], input[type="password"] {
+    background-color: rgb(245, 248, 250);
+
+}
 
 body {
-    background-color: #E9EBEE;
+    background-color: white;
+}
+
+#statustext {
+    width: 50em;
+}
+
+#status-button { 
+    margin-left: 20px;
 }
