--- a/templates/login.html
+++ b/templates/login.html
@@ -6,15 +6,15 @@
 
 {% block main %}
 
-<div>
-    <form class="center-form" action="/login" method="post">
+<div class="form-box">
+    <form class="" action="/login" method="post">
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
         </div>
         <div class="form-group">
             <input class="form-control" name="password" placeholder="Password" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <button class="btn btn-secondary" type="submit">Log In</button>
     </form>
 </div>  
 
