--- a/templates/register.html
+++ b/templates/register.html
@@ -6,8 +6,8 @@
 
 {% block main %}
 
-<div>
-    <form class="center-form" action="/register" method="post">
+<div class="form-box">
+    <form class="" action="/register" method="post">
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
         </div>
@@ -17,7 +17,7 @@
         <div class="form-group">
             <input class="form-control" name="passwordRepeat" placeholder="Repeat Password" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">Register</button>
+        <button class="btn btn-secondary" type="submit">Register</button>
     </form>
 </div>  
 
