--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,6 @@
 main {
     /* center contents */
-
+    background-color: #f5f5f5;
     
 }
 
@@ -8,35 +8,75 @@ main {
 .form-box {
     width: 300px;
     margin: 0 auto;
+    margin-top: 100px;
     text-align: center;
 }
 .center {
     text-align: center;
     margin: 0 auto;
-}
-
-.status-box {
-    display: flex;
-    align-items: center;
-}
-
-main {
     margin-top: 50px;
 }
 
-input[type="text"], input[type="password"] {
-    background-color: rgb(245, 248, 250);
+.current-user {
+    position: fixed;
+    top: 80px;
+    left: 15px;
+}
 
+main {
+    
 }
 
 body {
-    background-color: white;
+    background-color: #f5f5f5;
+    color: rgb(20, 23, 26);
 }
 
+#button-submit {
+    text-align: center!;
+}
 #statustext {
     width: 50em;
 }
 
 #status-button { 
     margin-left: 20px;
+}
+
+.main-feed {
+    width: 600px;
+    height: auto;
+    background-color: white;
+    border: 1px solid rgb(230, 236, 240);
+    margin: 0 auto;
+    margin-top: 30px;
+  }
+  
+#userstatus {
+    resize: none;
+    font-size: 18px;
+    border: none;
+}
+
+.status-box {
+    padding-top: 15px;
+}
+
+.button-block {
+    display: flex;
+    margin-top: 8px;
+}
+
+#btn-submit {
+    margin-right: 25px;
+    border-radius: 35px;
+    margin-left: 5px;
+}
+
+.include {
+    margin-right: 10px;
+}
+
+.status-icon {
+    margin-right: 5px;
 }
