--- a/templates/login.html
+++ b/templates/login.html
@@ -8,13 +8,15 @@
 
 <div class="form-box">
     <form class="" action="/login" method="post">
+        <img class="mb-4" src="/static/iconblack.png" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">Log in</h1>
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
         </div>
         <div class="form-group">
             <input class="form-control" name="password" placeholder="Password" type="password">
         </div>
-        <button class="btn btn-secondary" type="submit">Log In</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" id=>Log in</button>
     </form>
 </div>  
 
