--- a/templates/apology.html
+++ b/templates/apology.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block main %}
+<div class="error">
     <p>Error: {{code}}</p>
     <p>{{message}}</p>
+    <input type="button" value="Go Back" onclick="history.back(-1)" />
+</div>
 {% endblock %}
