--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,7 +44,11 @@
                 </div>
             </nav>
         </div>
-
+        {% if get_flashed_messages() %}
+            <div class="alert alert-danger border text-center alert-error" role="alert">
+                {{ get_flashed_messages() | join(" ") }}
+            </div>
+        {% endif %}
         <!-- Main block-->
         <main class="container p-5 toppad">
             {% block main %}{% endblock %}
