Added button script that disables if textarea is empty

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <textarea class="form-control" id="userstatus" name="userstatus" maxlength="150" rows="3" placeholder="What's up?"></textarea>
 
             <div class="status-actions btn-block d-flex flex-row-reverse align-items-center">
-                <button type="submit" class="btn btn-primary" id="btn-submit"><strong>Awit!</strong></button>
+                <button type="submit" class="btn btn-primary" id="btn-submit" disabled="true"><strong>Awit!</strong></button>
                 <div class="status-buttons">
                     <button><img src="/static/emoji.svg"></button>
                 </div>
@@ -46,25 +46,7 @@
             
         </div>
     </div>
-    <div class="user-post">
-        <div class="post-header">
-            <div class="post-user mb-0">@gianbenta</div>
-            <div class="post-date mb-1 text-muted">5hours ago</div>
-        </div>
-        <div class="post-content">
-            <p class="card-text mb-auto">Bryle bakit ang benta mo tanong ko lang huh.</p>
-        </div>
-        <div class="post-actions">
-            <div class="like-post">
-                <button><img src="/static/like.svg"></button>
-            </div>
-            <div class="divider"></div>
-            <div class="retweet-post">
-                <button><img src="/static/retweet.svg"></button>
-            </div>
-            
-        </div>
-    </div>
+
     
 </div>
 {% else %}
